Major file reorganisation contd.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 ## Created by Anjuta
 
-SUBDIRS = src 
+SUBDIRS = src \
+	scripts
 
 latticemertdocdir = ${prefix}/doc/latticemert
 latticemertdoc_DATA = \
@@ -9,12 +10,8 @@ latticemertdoc_DATA = \
 	COPYING\
 	AUTHORS\
 	ChangeLog\
-	INSTALL\
+	INSTALL \
 	NEWS
-
-
-EXTRA_DIST = $(latticemertdoc_DATA)
-
 
 # Remove doc directory on uninstall
 uninstall-local:
