--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,39 @@
+aclocal.m4
+autom4te.cache
+config.h
+config.h.in
+config.log
+config.status
+configure
+intltool-extract*
+intltool-merge*
+intltool-modules*
+intltool-update*
+libtool
+prepare.sh
+stamp-h*
+ltmain.sh
+mkinstalldirs
+config.guess
+config.sub
+Makefile
+Makefile.in
+Debug
+.deps
+.anjuta*
+.tm_project*
+.libs
+.deps
+.*swp
+.nautilus-metafile.xml
+*.autosave
+*.pws
+*.bak
 *~
+#*#
+*.gladep
+*.la
+*.lo
 *.o
-*.prof
-*.pdf
-*.dot
-*.out
-*.log
-*.osg
-*.ref
-LatticeMERT
-BleuTest
+*.class
+*.pyc
